--- a/contacto.html
+++ b/contacto.html
@@ -161,7 +161,7 @@
 
                 <div class="botones-autor">
                     <button class="btn-elegante"><a href="autor.html">Autor</a></button>
-                    <button class="btn-elegante"><a href="InformacionDueño.html">Dueño</a></button>
+                    <button class="btn-elegante"><a href="informacionDueño.html">Dueño</a></button>
                 </div>
 
             </div>
